--- a/project.config.json
+++ b/project.config.json
@@ -4,17 +4,14 @@
 		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
-		"minified": true
+		"minified": true,
+		"newFeature": true
 	},
-	"compileType": "weapp",
+	"compileType": "miniprogram",
 	"libVersion": "1.6.0",
-	"appid": "填写你的appid不然手机端不能预览",
+	"appid": "wx33ae5cd4c0585798",
 	"projectname": "demo",
 	"condition": {
-		"weapp": {
-			"current": -1,
-			"list": []
-		},
 		"search": {
 			"current": -1,
 			"list": []
@@ -22,6 +19,17 @@
 		"conversation": {
 			"current": -1,
 			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": 0,
+					"name": "自定义",
+					"pathName": "pages/divPage/index",
+					"query": ""
+				}
+			]
 		}
 	}
 }
