--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 					"id": 0,
 					"name": "自定义",
 					"pathName": "pages/divPage/index",
-					"query": ""
+					"query": "id=b31360ca-ed05-4af1-8114-232742f3136f&uid=ffa4070a-aa61-40fb-af45-80df3793a985"
 				}
 			]
 		}
